    DataTransferProtocol sockets and allow configuring auto-tuning.
    (He Tianye via cmccabe)

    HDFS-8855. Webhdfs client leaks active NameNode connections.
    (Xiaobing Zhou via Xiaoyu Yao)

    HDFS-7390. Provide JMX metrics per storage type. (benoy)

    HDFS-9397. Fix typo for readChecksum() LOG.warn in BlockSender.java.
    (Enrique Flores via Arpit Agarwal)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-8099. Change "DFSInputStream has been closed already" message to
    debug log level (Charles Lamb via Colin P. McCabe)

    HDFS-8117. More accurate verification in SimulatedFSDataset: replace
    DEFAULT_DATABYTE with patterned data. (Zhe Zhang via wang)

    HDFS-8100. Refactor DFSClient.Conf to a standalone class and separates
    short-circuit related conf to ShortCircuitConf.  (szetszwo)

  OPTIMIZATIONS

    HDFS-8656. Preserve compatibility of ClientProtocol#rollingUpgrade after
    finalization. (wang)

    HDFS-8867. Enable optimized block reports. (Daryn Sharp via jing9)

  BUG FIXES

    HDFS-8863. The remaining space check in BlockPlacementPolicyDefault is
    flawed. (Kihwal Lee via yliu)

    HDFS-8995. Flaw in registration bookeeping can make DN die on reconnect.
    (Kihwal Lee via yliu)

    HDFS-8384. Allow NN to startup if there are files having a lease but are not
    under construction. (jing9)

    HDFS-9178. Slow datanode I/O can cause a wrong node to be marked bad.
    (Kihwal Lee)

    HDFS-9220. Reading small file (< 512 bytes) that is open for append fails
    due to incorrect checksum (Jing Zhao via kihwal)

    HDFS-9305. Delayed heartbeat processing causes storm of subsequent
    heartbeats. (Arpit Agarwal)

    HDFS-9083. Replication violates block placement policy (Rushabh Shah)

    HDFS-9106. Transfer failure during pipeline recovery causes permanent
    write failures. (Kihwal Lee)

    HDFS-6481. DatanodeManager#getDatanodeStorageInfos() should check the